build: 26/Aug Issue 15 + Front End Design updates